[project]
name = "pageindexcgfork"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "langchain-openai",
    "openai",
    "pymupdf",
    "pypdf2",
    "python-dotenv",
    "python-multipart>=0.0.20",
    "tiktoken",
    "transformers",
    "uvicorn",
]

[dependency-groups]
dev = [
    "ruff>=0.14.8",
]

[tool.ruff]
# Linting-Optionen
target-version = "py312"
line-length = 120
extend-exclude = ["build", "dist", ".venv"]

[tool.ruff.lint]
select = ["I"]                    # I=Sortierung der Imports

[tool.ruff.format]
# Formatierer-Einstellungen
quote-style = "double"            # "single" wenn du das bevorzugst
indent-style = "space"            # "tab" wäre möglich
skip-magic-trailing-comma = false # True → weniger aggressive Wraps